Changes on subject.ejs

--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -156,7 +156,7 @@
 <body>
   <div class="navbar">
     <div class="nav">
-      <span class="title"><b>student</b></span>
+      <span class="title"><b>SUBJECT</b></span>
       <div class="links">
         <a href="/dashboard" style="color:#fff;text-decoration:none;">REGISTER</a>
         <a href="/subject" style="color:#fff;text-decoration:none;font-weight:bold;">SUBJECT</a>
@@ -167,32 +167,26 @@
   </div>
   <div class="container">
     <div class="subject-list-section">
-      <div class="subject-info-bar">
-        <span>SUBJECT : <b>02345</b></span>
-        <span>SYSAD 31</span>
-        <span>1:30-3:00 TTH</span>
-        <span>526</span>
-      </div>
       <table>
         <thead>
           <tr>
-            <th>#</th>
-            <th>IDNO</th>
-            <th>LASTNAME</th>
-            <th>FIRSTNAME</th>
-            <th>COURSE</th>
-            <th>LEVEL</th>
-            <th>ACTION</th>
+            <th>EDPCODE</th>
+            <th>SUBCODE</th>
+            <th>DESCRIPTIVE TITLE</th>
+            <th>SCHEDULE</th>
+            <th>ROOM</th>
+            <th>UNITS</th>
+            <th>ACTIONS</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>1.</td>
             <td><a href="#" style="color:#222;text-decoration:underline;">1000</a></td>
-            <td>DURANO</td>
-            <td>DENNIS</td>
-            <td>BSCPE</td>
-            <td>4</td>
+            <td>SYSADMN32</td>
+            <td>SYSTEM ADMINISTRATION</td>
+            <td>1:30-3:00 TTH</td>
+            <td>526</td>
+            <td>4.0</td>
             <td>
               <span class="action-btn" title="Delete">
                 <!-- Trash Can Icon -->
